Added my existing project

--- a/Blog-back-end/appsettings.json
+++ b/Blog-back-end/appsettings.json
@@ -6,5 +6,14 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-0L03IAF;Database=MyBlog;Trusted_Connection=True;",
+    "AzureConnection": "Server=tcp:bookcross.database.windows.net,1433;Initial Catalog=bookcrossing;Persist Security Info=False;User ID=book;Password=pulLrequesT312;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
+  },
+
+  "StorageConfiguration": {
+    "FolderForBookImages": "book_images"
+  },
+  "message": "Hello my dear friends1!"
 }
