Added azure connection string

--- a/Blog-back-end/appsettings.json
+++ b/Blog-back-end/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-0L03IAF;Database=MyBlog;Trusted_Connection=True;",
-    "AzureConnection": "Server=tcp:bookcross.database.windows.net,1433;Initial Catalog=bookcrossing;Persist Security Info=False;User ID=book;Password=pulLrequesT312;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30"
+    "AzureConnection": "Server=tcp:blogbackenddb.database.windows.net,1433;Database=blogdb;User ID=vitaliy;Password=Usedrugs3;Encrypt=true;Connection Timeout=30;"
   },
 
   "StorageConfiguration": {
